--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -4,7 +4,7 @@ on: push
 jobs:
   hello-world-jobs:
     runs-on: ubuntu-latest
-      steps:
-    -name: check out repository code
-    -uses: actions/checkout@v3
-    -run: echo "$(cat hello_world.txt)"
+    steps:
+      -name: check out repository code
+       uses: actions/checkout@v3
+      -run: echo "$(cat hello_world.txt)"
